# CarneadesDSL

./: CHANGELOG  CHANGELOG.md  CarneadesDSL.cabal  LICENSE  README.md  README.txt  examplecaes.txt
.github/workflows/: ci.yml
Language/Carneades/: CarneadesDSL.lhs  ExampleCAES.lhs  Input.hs  examplecaes.txt
doc/: ExampleCAES.lhs
src/Language/Carneades/: CarneadesDSL.hs  Cyclic.hs  ExampleCAES.hs  Input.hs
test/: Main.hs
test/Test/Language/Carneades/: CarneadesDSL.hs  Input.hs
