cabal-version: 3.0
name:          CarneadesDSL
version:       2.0.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Bas van Gijzel, Henrik Nilsson
maintainer:    Bas van Gijzel <nenekotan+git@gmail.com>
copyright:     Copyright (C) 2014-2026 Bas van Gijzel
stability:     experimental
category:      Argumentation, Embedded, AI
homepage:      https://github.com/nebasuke/CarneadesDSL
synopsis:      An implementation and DSL for the Carneades argumentation model.
description:
  An implementation and domain specific language for the Carneades
  argumentation model. See "Haskell Gets Argumentative" in the
  Proceedings of Symposium on Trends in Functional Programming
  (TFP 2012) by Bas van Gijzel and Henrik Nilsson. Thanks to Stefan
  Sabev for providing initial code for the cyclicity check.
  For the papers accompanying this library see "Towards a framework for
  the implementation and verification of translations between argumentation
  models" and "A principled approach to the implementation of argumentation
  models", available at <https://scholar.google.com/citations?user=Xu4yjvwAAAAJ&hl>.
build-type:    Simple
tested-with:   GHC == 9.4.8, GHC == 9.6.6, GHC == 9.8.4, GHC == 9.10.1

extra-doc-files:
  README.md
  CHANGELOG.md

extra-source-files:
  LICENSE
  examplecaes.txt
  doc/CarneadesDSL.lhs
  doc/ExampleCAES.lhs

source-repository head
  type:     git
  location: https://github.com/nebasuke/CarneadesDSL

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  default-language: Haskell2010

library
  import:           warnings
  hs-source-dirs:   src
  build-depends:
    base       >= 4.16 && < 5,
    containers >= 0.6  && < 0.8,
    fgl        >= 5.7  && < 5.9,
    parsec     >= 3.1  && < 3.2
  exposed-modules:
    Language.Carneades.CarneadesDSL
    Language.Carneades.ExampleCAES
    Language.Carneades.Cyclic
    Language.Carneades.Input

test-suite carneadesdsl-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
    base              >= 4.16 && < 5,
    CarneadesDSL,
    containers        >= 0.6  && < 0.8,
    tasty             >= 1.4  && < 1.6,
    tasty-hunit       >= 0.10 && < 0.11
  other-modules:
    Test.Language.Carneades.CarneadesDSL
    Test.Language.Carneades.Input
